[package]
name = "speedreader"
version = "0.1.2"
edition = "2024"
authors = ["Francis Eugene Casibu"]
description = "A command-line speed reading tool"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fcasibu/speedreader"
keywords = ["speed-reading", "cli", "text"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
crossterm = "0.29.0"
dirs = "5.0.1"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0.58"
toml = "0.8.14"
tokio = { version = "1.44.2", features = ["full"] }
unicode-width = "0.2.0"
console = "0.15.11"
